--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ body {
         display: block;
         -webkit-transform: scale(1);
                 transform: scale(1);
+                opacity: 0.6;
     }
 
     100% {
@@ -89,6 +90,7 @@ body {
         display: block;
         -webkit-transform: scale(1);
                 transform: scale(1);
+                opacity: 0.6;
     }
 
     100% {
@@ -101,9 +103,10 @@ body {
 
 .carousel-caption {
 	width: 35%;
-	height: 20%;
+	height: 23%;
 	background-color: rgba(0, 0, 0, 0.2);
-	margin: 5% 40%;
+	margin: 0 auto;
+	margin-bottom: 8%;
 	border-radius: 5px;
 	padding: 5px;
 	box-shadow: 2px 2px 6px #bdbfbd;
@@ -118,6 +121,18 @@ body {
 .carousel-caption h5 {
 	font-size: 25px;
 	margin: 2.5% 0;
+}
+
+.btn-outline-primary {
+    color: #fff;
+    border-color: #fff;
+    font-weight: bold;
+}
+
+.btn-outline-primary:hover {
+    background-color: #fff;
+    border-color: #fff;
+    color: #B49882;
 }
 
 @media(max-width: 768px){
