--- a/css/style.css
+++ b/css/style.css
@@ -171,15 +171,15 @@ body {
 }
 
 .priest-carousel-container .carousel-item > img {
-	width: 100%;
-	height: 300px;
+	width: 150px;
+	height: 200px;
 	filter: grayscale();
 }
 
 /*section parish-figures*/
 
 .parish-figures{
-	background-image: url(../images/las3.jpg);
+	background-image: url(../images/1.jpg);
 	background-size: cover;
 	background-attachment: fixed;
 	height: 400px;
@@ -203,7 +203,7 @@ body {
 }
 
 .parish-figures-container div p {
-	color: #ddd0d0;
+	color: #0093dd;
 	font-size: 25px;
 	font-weight: bold;
 	padding: 4%;
@@ -219,10 +219,11 @@ body {
 /*footer*/
 
 footer {
-	background-image: url(../images/footer-background-image.jpg);
-	filter: sepia(80%);
+	
 	padding-top: 50px;
+	background-color: #274747;
 }
+
 
 .col h4  {
 	color: #DBD9D9;
@@ -230,13 +231,14 @@ footer {
 	margin-bottom: 30px;
 	text-align: center;
 	font-weight: bold;
+	padding: 0 20px 0 0;
 }
 
 footer .col p {
 	color: #DBD9D9;
 	font-size: 15px;
 	text-align: justify;
-	padding: 0 40px;
+	padding: 0 30px 0 0;
 	line-height: 30px;
 }
 
@@ -254,8 +256,8 @@ footer .about-us .modal .card-body {
 }
 
 footer .about-us button {
-	width: 84%;
-	margin: 0 37px 50px;
+	width: 80%;
+	margin: 0 17px 50px;
 	background-color: inherit;
 	border-color: #DBD9D9;
 }
@@ -289,11 +291,7 @@ footer .about-us .modal button:hover {
 }
 
 .nested div:last-child {
-	padding: 0 130px 0 0;
-}
-
-.parish-office .nested div {
-margin-bottom: 7px;
+	padding: 0 60px 0 0;
 }
 
 footer .service-time-container {
@@ -316,7 +314,7 @@ footer div[class*="service"] h5 {
 }
 
 footer div[class*="service"] {
-	background-color: #DBD9D9;
+	background-color: #f7f2f2;
 	text-align: center;
 	padding: 0 100px 30px;
 }
