--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic);
+/*font-family: 'Open Sans', sans-serif;
+font-family: 'Gloria Hallelujah', cursive;
+font-family: 'Pacifico', cursive;*/
 
 body {
 	font-family: 'Open Sans', sans-serif;
@@ -130,6 +132,34 @@ body {
 	margin: 2.5% 0;
 }
 
+/*updates*/
+
+.updates-board {
+	font-family: 'Gloria Hallelujah', cursive;
+	padding: 70px 0 50px;
+	background-image: url('../images/11.jpg');
+	background-size: cover;
+}
+
+.updates-board h3 {
+	text-align: center;
+	font-size: 55px;
+	padding-bottom: 30px;
+	color: #000;
+}
+
+.updates-board p, .updates-board h4, .updates-board ul > li {
+	font-size: 18px;
+	color: #000;
+	padding: 20px 80px;
+}
+
+.updates-board ul > li {
+	margin: 20px 0 20px 80px;
+	padding: 0;
+
+}
+
 /*priest-carousel*/
 
 .priests {
@@ -150,6 +180,7 @@ body {
 	padding: 30px;
 	color: #DBD9D9;
 	opacity: 0.5;
+	font-family: 'Pacifico', cursive;
 }
 
 .priest-carousel-container > div {
